[project]
name = "soniclink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "alembic>=1.15.2",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.11",
    "mypy>=1.15.0",
    "psycopg>=3.2.6",
    "psycopg[binary]",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "ruff>=0.11.2",
    "sqlalchemy>=2.0.39",
    "uv>=0.6.11",
    "uvicorn>=0.34.0",
    "kagglehub>=0.3.12",
    "Levenshtein>=0.27.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
